--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do site</title>
+    <title>putinha suja</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nesciunt, sapiente labore blanditiis nobis distinctio maiores in non, unde laboriosam quasi cupiditate corporis aperiam quod velit dicta neque tempore omnis.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de java script</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi excepturi dolorem magnam sit, fuga quam expedita laborum asperiores ipsam neque sint et ex dolores eveniet, possimus adipisci aperiam facilis pariatur?</p>
         </article>
     </main>
 </body>
