Adicionei imagem no header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <header>
             <h1>Cursos gratis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
