Adicionei imagens e alguns links

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img src="imagens/curso-html-css.png" alt="Curso em video HTML" class="lado">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nesciunt, sapiente labore blanditiis nobis distinctio maiores in non, unde laboriosam quasi cupiditate corporis aperiam quod velit dicta neque tempore omnis.</p>
+            <p><a href="">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de java script</h2>
+            <img src="imagens/curso-javascript.png" alt="Curso Js" class="lado">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi excepturi dolorem magnam sit, fuga quam expedita laborum asperiores ipsam neque sint et ex dolores eveniet, possimus adipisci aperiam facilis pariatur?</p>
+            <p><a href="">Acesse o curso de Javascript</a></p>
         </article>
     </main>
 </body>
